welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var indice: Int
            ^indexOfValue:4: error: Int does not take parameters
		if (nums(i) == value) {return indice(i)}
                                                    ^