welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var indice: Int
	for (i <- 0 to nums.length-1) {
		if (nums(i) == value) {return indice(i)}
	}
	return -1
}
